[gd_scene load_steps=9 format=2]

[ext_resource path="res://GAME MAPAS/itens/New Piskel (2).png" type="Texture" id=1]
[ext_resource path="res://Sounds/mixkit-door-key-in-door-lock-2842.wav" type="AudioStream" id=2]
[ext_resource path="res://GAME MAPAS/itens/New Piskel (3).png" type="Texture" id=3]
[ext_resource path="res://pixil-frame-0 (3).png" type="Texture" id=4]
[ext_resource path="res://GAME MAPAS/Scripts/baularge.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), null ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": false,
"name": "aberto",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 5 )

[node name="bau" type="Area2D"]
collision_layer = 2147483648
collision_mask = 2147483648
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "aberto"
__meta__ = {
"_edit_group_": true
}

[node name="Collisionbau2" type="CollisionShape2D" parent="."]
position = Vector2( 0.005, 1.526 )
scale = Vector2( 0.615, 0.495 )
shape = SubResource( 2 )

[node name="Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="Area_cafe_large" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648
__meta__ = {
"_edit_group_": true
}

[node name="cafelarge" type="Sprite" parent="Area_cafe_large"]
visible = false
position = Vector2( -14, 2 )
scale = Vector2( 0.303125, 0.328125 )
texture = ExtResource( 4 )

[node name="CollisionItemL" type="CollisionShape2D" parent="Area_cafe_large"]
position = Vector2( -16, 3 )
shape = SubResource( 3 )
disabled = true

[node name="Label" type="Label" parent="."]
margin_left = -17.0
margin_top = -21.0
margin_right = 23.0
margin_bottom = -7.0

[connection signal="body_entered" from="." to="." method="_on_bau_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_bau_body_exited"]
[connection signal="body_entered" from="Area_cafe_large" to="." method="_on_Area_cafe_large_body_entered"]
